2006-04-21  Sebastien Moutte  <sebastien@moutte.net>

	* gst/matroska/matroska-demux.c: (gst_matroskademux_do_index_seek):
	Use gst_guint64_to_gdouble for conversions
	* win32/vs6/gst_plugins_good.dsw:
	* win32/vs6/libgsticydemux.dsp:
	Add a project file for icydemux

2006-04-21  Wim Taymans  <wim@fluendo.com>

	Patch by: Fabrizio Gennari <fabrizio dot ge at tiscali dot it>

	* gst/avi/gstavidemux.c: (gst_avi_demux_parse_stream),
	(gst_avi_demux_parse_index), (gst_avi_demux_massage_index):
	When splitting audio chunks, the block alignment is not taken in
	consideration, so the smaller chunks could be of size which is 
	not a multiple of the block alignment. Fixes #336904

2006-04-21  Wim Taymans  <wim@fluendo.com>

	* ext/raw1394/gstdv1394src.c: (gst_dv1394src_convert):
	Use scale functions

2006-04-21  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/dv/gstdv.c: (plugin_init):
	  Fix build.

2006-04-21  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/debug/progressreport.c: (gst_progress_report_finalize),
	(gst_progress_report_class_init), (gst_progress_report_init),
	(gst_progress_report_do_query), (gst_progress_report_report),
	(gst_progress_report_set_property),
	(gst_progress_report_get_property):
	  Add 'format' property to force querying to a particular format.

2006-04-21  Andy Wingo  <wingo@pobox.com>

	* ext/dv/gstdv.c (plugin_init): libdv is a marginal decoder, at
	best, on big endian systems. Drop its rank in that case. OTOH on
	x86 it's quite fine. See changes from today in gst-ffmpeg as well.

2006-04-21  Michael Smith  <msmith@fluendo.com>

	* configure.ac:
	* gst/icydemux/Makefile.am:
	* gst/icydemux/gsticydemux.c: (gst_icydemux_get_type),
	(gst_icydemux_base_init), (gst_icydemux_class_init),
	(gst_icydemux_reset), (gst_icydemux_init),
	(gst_icydemux_sink_setcaps), (gst_icydemux_dispose),
	(gst_icydemux_add_srcpad), (gst_icydemux_remove_srcpad),
	(unicodify), (gst_icydemux_unicodify),
	(gst_icydemux_parse_and_send_tags),